@@ -88,7 +88,7 @@ class ZMSettingsAdminController extends ZMPluginPageController {
                 $parameter[$lname] = $value;
             }
             foreach ($plugin->getConfigValues(false) as $widget) {
-                if ($widget instanceof ZMFormWidget) {
+                if ($widget instanceof ZMFormWidget && null !== $request->getParameter($widget->getName())) {
                     $value = $parameter[$widget->getName()];
                     if (!$widget->compare($value)) {
                         // value changed
